test/errors/type/str/rtrim1.yasl
mt.lookup('', .rtrim)('1', true)
